fixed margins and word spacing, also fotter width and height.

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -27,7 +27,7 @@ body {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background: purple;
+    background: green;
     position: absolute;
     right: 12px;
     height: 60px;
@@ -153,21 +153,41 @@ body {
     bottom: 0px;
     left: 0px;
     width: 100%;
-    
+    height: 80px;
 }
 
-#left-nav-bottom, #right-nav-bottom {
-    display: flex;
-    flex-direction: row;
+#left-nav-bottom, #right-nav-bottom, #change-country {
+    background: green;
 }
 
-
+#change-country {
+    width: 120px;
+    margin-left: 30px;
+}
 
 #left-nav-bottom {
     float: left;
+    width: 420px;
+    margin-left: 30px;
+    word-spacing: 24px;
+   
 }
 
 #right-nav-bottom {
     float: right;
+    width: 220px;
+    word-spacing: 20px;
+    margin-right: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
 }
 
+a {
+    text-decoration: none;
+    word-spacing: normal;
+}
+
+span {
+    margin-left: 24px;
+}
